# twitch_colorchanger

./: .bandit  .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .secrets.baseline  ARCHITECTURE.md  AUDIT.md  Dockerfile  FIX_PLAN.md  FUNCTIONAL_DOCUMENTATION.md  GITHUB_SECRETS.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_PLAN.md  Makefile  README.md  REFACTOR.md  SIMPLIFICATION_PLAN.md  SPECIFICATION.md  TESTING.md  codecov.yml  conftest.py  docker-compose.yml-sample  main.py  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  start_bot.bat  start_bot.sh  twitch_colorchanger.conf.sample  twitch_colorchanger.py
.github/: CI_SETUP.md  README.md
.github/workflows/: code-quality.yml  docker-build.yml  tests.yml
scripts/: cleanup_leftovers.sh  event_template_audit.py  import_smoke_test.py  reorganize_src.py
src/: __init__.py  adaptive_scheduler.py  application_context.py  async_irc.py  async_irc_adapter.py  backoff_strategy.py  bot.py  bot_manager.py  bot_registrar.py  bot_stats.py  color_change_service.py  colors.py  config.py  config_repository.py  config_validator.py  config_watcher.py  constants.py  device_flow.py  error_handling.py  event_catalog.py  event_template_audit.py  event_templates.json  health.py  http_client.py  http_client_fixed.py  irc_connection.py  irc_dispatcher.py  irc_health.py  irc_heartbeat.py  irc_join.py  irc_listener.py  irc_models.py  irc_parser.py  logger.py  logging_config.py  main.py  manager_health.py  manager_statistics.py  memory_monitor.py  rate_limiter.py  (+12 more)
src/api/: __init__.py  twitch.py
src/auth_token/: __init__.py  background_task_manager.py  client.py  client_cache.py  device_flow.py  hook_manager.py  manager.py  provisioner.py  token_refresher.py  token_validator.py  types.py
src/bot/: __init__.py  bot_persistence.py  bot_registrar.py  color_changer.py  connection_manager.py  core.py  lifecycle_manager.py  manager.py  message_handler.py  message_processor.py  signal_handler.py  token_handler.py  token_refresher.py
src/chat/: __init__.py  abstract.py  cache_manager.py  channel_resolver.py  cleanup_coordinator.py  connection_coordinator.py  connection_state_manager.py  eventsub_backend.py  irc_backend.py  message_coordinator.py  message_processor.py  message_transceiver.py  protocols.py  reconnection_coordinator.py  reconnection_manager.py  subscription_coordinator.py  subscription_manager.py  token_manager.py  websocket_connection_manager.py  websocket_connector.py
src/color/: __init__.py  models.py  service.py  utils.py
src/config/: __init__.py  async_persistence.py  config_loader.py  config_saver.py  config_utils.py  config_validator.py  core.py  globals.py  model.py  repository.py  token_setup_coordinator.py  watcher.py
src/errors/: __init__.py  eventsub.py  handling.py  internal.py
src/irc/: __init__.py  async_irc.py  connection.py  dispatcher.py  health.py  heartbeat.py  join.py  listener.py  models.py  parser.py
src/logs/: __init__.py  event_catalog.py  event_templates.json  logger.py
src/manager/: __init__.py  health.py  reconnect.py  statistics.py  task_watchdog.py
src/project_logging/: logger.py
src/rate/: __init__.py  backoff_strategy.py  rate_limit_headers.py  rate_limiter.py  retry_policies.py
src/scheduler/: __init__.py  adaptive_scheduler.py
src/token/: client.py  device_flow.py  manager.py  provisioner.py
src/utils/: __init__.py  circuit_breaker.py  helpers.py  resource_monitor.py  retry.py
tests/: README.md  conftest.py  test_application_context.py  test_async_persistence.py  test_auth_token_manager.py  test_bot.py  test_bot_error_recovery.py  test_bot_initialization.py  test_bot_lifecycle_and_color_integration.py  test_bot_manager.py  test_bot_message_handling.py  test_bot_message_processor.py  test_cache_manager.py  test_cache_manager_integration.py  test_ccc_command.py  test_ccc_hex_blocked_nonprime.py  test_ccc_invalid.py  test_channel_resolver.py  test_circuit_breaker.py  test_color_change_service.py  test_color_changer.py  test_color_utils.py  test_colors.py  test_config.py  test_config_core.py  test_config_normalization.py  test_config_repository.py  test_config_validation.py  test_config_validator.py  test_config_watcher.py  test_connection_manager.py  test_constants.py  test_core.py  test_device_flow.py  test_end_to_end_smoke.py  test_error_handling.py  test_errors_handling.py  test_event_catalog.py  test_event_catalog_audit.py  test_event_catalog_missing_file.py  (+66 more)
tests/fixtures/: api_responses.py  config_fixtures.py  sample_configs.py  token_fixtures.py  twitch_api_fixtures.py
tests/integration/: test_integration.py  test_websocket_pipeline_integration.py
tests/templates/: e2e_test_template.py  integration_test_template.py  unit_test_template.py
tests/unit/: test_async_persistence.py  test_background_task_manager.py  test_cache_manager.py  test_circuit_breaker.py  test_cleanup_coordinator.py  test_client_cache.py  test_color_changer.py  test_color_service.py  test_config_loader.py  test_config_saver.py  test_config_validator.py  test_connection_coordinator.py  test_connection_manager.py  test_connection_state_manager.py  test_hook_manager.py  test_main.py  test_message_coordinator.py  test_message_transceiver.py  test_reconnection_coordinator.py  test_reconnection_manager.py  test_resource_monitor.py  test_subscription_coordinator.py  test_subscription_manager_session_registry.py  test_token_refresher.py  test_token_setup_coordinator.py  test_token_validator.py  test_utils_retry.py  test_websocket_connector.py
