# Build system configuration
[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

# Core project metadata (was missing; added to avoid UNKNOWN package name)
[project]
name = "twitch_colorchanger"
version = "0.1.0"
description = "Twitch ColorChanger bot"
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
keywords = ["twitch", "bot", "color"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []  # Runtime deps still managed via requirements.txt; can be migrated later.

[project.scripts]
event-templates-audit = "scripts.event_template_audit:main"

# Optional: development dependency group (empty placeholder for future)
[project.optional-dependencies]
dev = []

# MyPy type checking
[tool.mypy]
python_version = "3.13"

# Relaxed (baseline) settings – we previously enabled very strict mode which produced
# an overwhelming volume of errors. This configuration dials things back so we can
# iteratively tighten specific modules later.

ignore_missing_imports = true        # Suppress 3rd party stub noise for now
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = false              # Allow incremental typing
warn_no_return = true
strict_equality = true
show_error_codes = true
pretty = true

# Allow untyped defs during transition (we can re‑enable per-module later)
disallow_untyped_defs = false
check_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_decorators = false
no_implicit_optional = false
disallow_any_expr = false
disallow_any_unimported = false
disallow_any_generics = false
disallow_subclassing_any = false
no_implicit_reexport = false
follow_imports = "skip"

# Per-module relaxations (keep legacy modules compiling). Remove over time.
# Module-specific relaxations (mypy 1.10+ style via overrides)
[[tool.mypy.overrides]]
module = ["src.config.watcher"]
disallow_untyped_defs = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = ["src.manager.*"]
disallow_untyped_defs = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = ["src.scheduler.adaptive_scheduler"]
disallow_untyped_defs = false
check_untyped_defs = false

# Bandit security linting
[tool.bandit]
skips = ["B101"]  # Skip assert_used test

# Flake8 would go in setup.cfg or .flake8, but we'll use pyproject.toml compatible tools

# Ruff - Modern Python linter and formatter
[tool.ruff]
target-version = "py311"
line-length = 88

# Enable specific rule sets
lint.select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort (import sorting)
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "UP",     # pyupgrade
    "S",      # security
    "PERF",   # performance
    "ASYNC",  # async best practices
]

# Ignore specific rules that are too strict for this project
lint.ignore = [
    "E501",   # Line too long (handled by formatter)
    "E203",   # Whitespace before ':' (formatter handles this)
    "SIM105", # Use contextlib.suppress (preference - explicit is clearer)
    "SIM108", # Use ternary operator (preference - if/else can be clearer)
    "SIM103", # Return condition directly (preference - explicit return is clearer)
]

# Exclude patterns
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    ".pytest_cache",
    "htmlcov",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"main.py" = ["T201"]
"tests/*" = ["S101"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["src"]
known-third-party = ["aiohttp", "httpx", "watchdog"]

# Markdown formatting
[tool.mdformat]
wrap = "keep"           # Preserve existing line wrapping
end_of_line = "lf"      # Use Unix line endings
number = false          # Don't renumber ordered lists
